# github-template

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  cargo-generate.toml  rust-toolchain.toml
.github/workflows/: ci.yml  main.yml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/{{project-name}}/: Cargo.toml
