[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["{{authors}}"]
edition = "2021"
homepage = "https://github.com/{{namespace}}/{{project-name}}.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/{{namespace}}/{{project-name}}.git"
# needed for [workspace.package]
rust-version = "{{ msrv }}"
version = "0.1.0"
