[package]
name = "xtask"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
